@@ -1,3 +1,10 @@
+2004-05-23  Bruno Haible  <bruno@clisp.org>
+
+	* spvw_allocate.d (make_space_gc) [SPVW_BLOCKS]: Take
+	varobjects_misaligned into account.
+	* spvw_memfile.d (loadmem_from_handle): Take varobjects_misaligned into
+	account.
+
 2004-05-08  Bruno Haible  <bruno@clisp.org>
 
 	Make weak hash tables work.
